--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.30</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
